Bug 310687 - skanlite when using .jpg doesnt follows saving numbering
Summary: skanlite when using .jpg doesnt follows saving numbering
Status: RESOLVED FIXED
Alias: None
Product: Skanlite
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.7
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Kåre Särs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-26 03:23 UTC by Simple
Modified: 2012-11-27 20:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simple 2012-11-26 03:23:40 UTC
In skanlite i choose the option "Open the save dialog for the first image only" and in field "Name & Format" i choose to start with "image-0030"

Then the saved image will be named "image-0001.jpg" instead doing what i asked that was to start in number 0030.

When using the .png extension skanlite does what the users asks.

Reproducible: Always

Steps to Reproduce:
Already described
Actual Results:  
skanlite doesnt start saving files starting from the set number

Expected Results:  
skanlite should start saving files starting from the set number like it happens when choosing with .png extension
Comment 1 Kåre Särs 2012-11-26 06:06:08 UTC
*** Bug 310689 has been marked as a duplicate of this bug. ***
Comment 2 Kåre Särs 2012-11-26 06:06:49 UTC
*** Bug 310688 has been marked as a duplicate of this bug. ***
Comment 3 Kåre Särs 2012-11-26 06:10:59 UTC
There is no way to set the start number yet...

A solution could be to always continue from the last used number in stead of always searching available numbers starting from 1...
Comment 4 Simple 2012-11-26 13:30:49 UTC
Yes, but imagine you forgot to set some, or simply want to change the extension, and still be able to continue with the numbering of a task that was already started.
Comment 5 Simple 2012-11-26 13:39:19 UTC
Lets imagine you have started a task, but for some reason you need to change some setting, if you do it, skanlite will start numbering as a new task instead providing a way to continue the existent task numbering.
Comment 6 Kåre Särs 2012-11-27 20:45:44 UTC
Git commit eccaca1f4d8acd295a5d4ba553ed58e1b7d9e179 by Kåre Särs.
Committed on 27/11/2012 at 20:38.
Pushed by sars into branch 'master'.

Add option to set sequence-number
Do not open "first image" dialog after settings dialog has been canceled.
Related: bug 310688, bug 310689

M  +8    -8    src/SaveLocation.cpp
M  +27   -10   src/SaveLocation.ui
M  +32   -21   src/skanlite.cpp

http://commits.kde.org/skanlite/eccaca1f4d8acd295a5d4ba553ed58e1b7d9e179