Add option to set sequence-number Do not open "first image" dialog after settings dialog has been canceled.

BUG: 310687
BUG: 310688
BUG: 310689